# FeaturePainting

./: .gitignore  .uvenv  LICENSE  README.md  pyproject.toml
Blender/: README.md  blender_script.py  interactive_synthesis.py
anomaly_segmentation/: anomaly_localization.py  create_cl_dataset.py  fca.py  fca_add.py  models.py  multi_segmentation.py  op_utils.py  train_cl_dataset.py  train_vae.py  visualize_groups.py
anomaly_segmentation/conf/: create_cld.yaml  localization.yaml  segmentation.yaml  train_cl.yaml
anomaly_segmentation/conf/dataset/: mvtec.yaml  simple.yaml
anomaly_segmentation/conf/features/: cached.yaml  ckpt.yaml  rgb.yaml  wide.yaml
anomaly_segmentation/data/: __init__.py  cl_pairs_ds.py  dataset_base.py  feature_provider.py  mvtec.py  simple_dataset.py
synthesis/: .gitignore  README.md  fid.py  my_utils.py  train.py
synthesis/gradio_ui/: main.py
synthesis/gradio_ui/mycomponent/: README.md  pyproject.toml
synthesis/gradio_ui/mycomponent/backend/gradio_mycomponent/: mycomponent.py
synthesis/gradio_ui/mycomponent/demo/: app.py  space.py
synthesis/gradio_ui/mycomponent/frontend/: package-lock.json  package.json
synthesis/gradio_ui/mycomponent/frontend/shared/: InteractiveImageEditor.svelte
synthesis/gradio_ui/mycomponent/frontend/shared/tools/: Brush.svelte  BrushOptions.svelte
synthesis/torch_utils/: misc.py
synthesis/training/: dataset.py  dtd_dataset.py  gen_folder_dataset.py  gen_mvtec_dataset.py  loss.py  my_networks.py  training_loop.py
